--- a/animal-educate.html
+++ b/animal-educate.html
@@ -194,7 +194,7 @@
   </div>
 
   <!-- ✅ زر العودة للصفحة الرئيسية -->
-  <a href="main.html" id="back-to-main">🏠 العودة للرئيسية</a>
+  <a href="index.html" id="back-to-main">🏠 العودة للرئيسية</a>
 
   <footer>
     Made by Mohab (
