--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   <!-- ✅ زرين جديدين: أقرب للأزرار الرئيسية -->
   <div class="learn-more-container">
     <a href="educate.html" class="learn-btn" id="btn-learn-human">Learn About Human Nutrition</a>
-    <a href="ANIMAL-EDUCATE.HTML" class="learn-btn" id="btn-learn-animal">Learn About Animal Nutrition</a>
+    <a href="animal-educate.html" class="learn-btn" id="btn-learn-animal">Learn About Animal Nutrition</a>
   </div>
 
   <footer>
