--- a/result.html
+++ b/result.html
@@ -137,6 +137,30 @@
     #toggle-language {
       left: 10px;
     }
+    /* Share Button */
+    #share-btn {
+      background-color: #4caf50;
+      color: #000;
+      font-size: 14px;
+      font-weight: 700;
+      border-radius: 12px;
+      padding: 10px 20px;
+      margin-top: 15px;
+      margin-bottom: 8px;
+      box-shadow: 0 4px 10px rgba(76, 175, 80, 0.4);
+      transition: all 0.3s ease;
+      border: none;
+      cursor: pointer;
+      width: 90%;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    #share-btn:hover {
+      background-color: #43a047;
+      box-shadow: 0 6px 14px rgba(76, 175, 80, 0.6);
+      transform: translateY(-2px);
+    }
     /* Print Button */
     #print-pdf-btn {
       background-color: #ff9800;
@@ -145,7 +169,7 @@
       font-weight: 700;
       border-radius: 12px;
       padding: 12px 20px;
-      margin-top: 20px;
+      margin-top: 8px;
       margin-bottom: 10px;
       box-shadow: 0 4px 10px rgba(255, 152, 0, 0.4);
       transition: all 0.3s ease;
@@ -160,56 +184,33 @@
       display: inline-block;
       background: linear-gradient(45deg, #00ffd5, #00ebff);
       color: #000;
-      font-size: 20px;
+      font-size: 16px;
       font-weight: 700;
-      border-radius: 14px;
-      padding: 18px 30px;
-      margin-top: 15px;
-      box-shadow: 0 6px 20px rgba(0, 255, 213, 0.7),
-                  0 0 30px rgba(0, 255, 213, 0.4),
-                  0 0 50px rgba(0, 235, 255, 0.3);
+      border-radius: 12px;
+      padding: 12px 20px;
+      margin-top: 10px;
+      box-shadow: 0 4px 12px rgba(0, 255, 213, 0.5),
+                  0 0 20px rgba(0, 255, 213, 0.2);
       text-decoration: none;
       cursor: pointer;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-      position: relative;
-      overflow: hidden;
-      min-width: 280px;
-      letter-spacing: 0.5px;
-      font-family: 'Arial', sans-serif;
+      width: 90%;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
     #learn-more-btn:hover {
       background: linear-gradient(45deg, #00c9a3, #00d9ff);
-      box-shadow: 0 8px 25px rgba(0, 201, 163, 0.8),
-                  0 0 40px rgba(0, 201, 163, 0.5),
-                  0 0 70px rgba(0, 217, 255, 0.4);
-      transform: translateY(-3px) scale(1.03);
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
-    }
-    #learn-more-btn::before {
-      content: '';
-      position: absolute;
-      top: -10px;
-      left: -10px;
-      right: -10px;
-      bottom: -10px;
-      background: linear-gradient(45deg, #00ffd5, #00ebff, #00c9a3, #00d9ff, #00ffd5);
-      background-size: 300% 300%;
-      animation: shimmer 3s linear infinite;
-      opacity: 0.4;
-      border-radius: 20px;
-      z-index: -1;
-      filter: blur(10px);
-    }
-    @keyframes shimmer {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+      box-shadow: 0 6px 16px rgba(0, 201, 163, 0.7),
+                  0 0 25px rgba(0, 201, 163, 0.4);
+      transform: translateY(-2px);
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
     }
     #learn-more-btn::after {
       content: '';
       position: absolute;
       top: 0; left: 0; bottom: 0; right: 0;
-      border-radius: 14px;
+      border-radius: 12px;
       pointer-events: none;
       box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
       opacity: 0.2;
@@ -218,15 +219,49 @@
     #learn-more-btn:hover::after {
       opacity: 0.4;
     }
+    /* Responsive Design */
     @media (max-width: 600px) {
+      body {
+        padding: 15px;
+      }
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 15px;
+      }
+      .result-box {
+        width: 100%;
+        padding: 15px;
+        margin-bottom: 15px;
+      }
+      p, ul {
+        padding: 0 8px;
+      }
+      #share-btn,
       #print-pdf-btn,
       #learn-more-btn {
         width: 100%;
-        font-size: 18px;
-        text-align: center;
+        margin: 8px auto;
+        font-size: 15px;
       }
-      p, ul {
-        text-align: left !important;
+      #toggle-theme,
+      #toggle-language {
+        padding: 5px 8px;
+        font-size: 12px;
+      }
+      footer {
+        margin-top: 30px;
+        font-size: 11px;
+        padding: 5px;
+      }
+    }
+    @media (min-width: 601px) {
+      .result-box {
+        margin-bottom: 20px;
+      }
+      #share-btn,
+      #print-pdf-btn,
+      #learn-more-btn {
+        margin: 10px auto;
       }
     }
     /* Arabic Text Only Alignment */
@@ -244,6 +279,7 @@
       #toggle-language,
       footer,
       #print-pdf-btn,
+      #share-btn,
       #learn-more-btn {
         display: none;
       }
@@ -283,6 +319,10 @@
   <button id="toggle-theme" onclick="toggleTheme()">Toggle Theme</button>
   <h1 id="title">Calorie Results</h1>
   <div id="results"></div>
+  <!-- Share Button -->
+  <button id="share-btn" onclick="handleShare()">
+    📤 <span id="btn-share-text">Share Results</span>
+  </button>
   <!-- Save as PDF Button -->
   <button id="print-pdf-btn" onclick="handlePrint()">
     📄 <span id="btn-print-text">Save as PDF</span>
@@ -310,6 +350,8 @@
   <!-- Logic Script -->
   <script>
     let currentLang = "en";
+    let globalTdee = 0;
+
     function handlePrint() {
       const isMobile = /Android|iPhone|iPad|iPod|BlackBerry|Opera Mini/i.test(navigator.userAgent);
       if (isMobile) {
@@ -321,6 +363,33 @@
         window.print();
       }
     }
+
+    async function handleShare() {
+      const title = currentLang === "en" ? "Calorie Results" : "نتائج السعرات";
+      const text = currentLang === "en"
+        ? `My maintenance calories: ~${Math.round(globalTdee)} kcal`
+        : `سعراتي اليومية للثبات: ~${Math.round(globalTdee)} كيلو سعرة`;
+      
+      const url = window.location.href;
+
+      if (navigator.share) {
+        try {
+          await navigator.share({
+            title: title,
+            text: text,
+            url: url
+          });
+        } catch (err) {
+          console.log('مشاركة تم إلغاؤها أو حدث خطأ:', err);
+        }
+      } else {
+        alert(currentLang === "en"
+          ? "Sharing not supported on this browser. Link copied to clipboard!"
+          : "المتصفح لا يدعم المشاركة. تم نسخ الرابط إلى الحافظة!");
+        await navigator.clipboard.writeText(url);
+      }
+    }
+
     function toggleTheme() {
       document.body.classList.toggle("light-mode");
       const themeBtn = document.getElementById("toggle-theme");
@@ -330,20 +399,22 @@
         themeBtn.style.backgroundColor = "#00ffd5";
       }
     }
+
     function toggleLanguage() {
       currentLang = currentLang === "en" ? "ar" : "en";
-      // Update button texts
       document.getElementById("toggle-language").innerText =
         currentLang === "en" ? "عربي" : "English";
-      // Update title and other buttons
       document.getElementById("title").innerText =
         currentLang === "en" ? "Calorie Results" : "نتائج السعرات";
       document.getElementById("btn-print-text").innerText =
         currentLang === "en" ? "Save as PDF" : "احفظ كـ PDF";
+      document.getElementById("btn-share-text").innerText =
+        currentLang === "en" ? "Share Results" : "شارك النتائج";
       document.getElementById("learn-more-btn-text").innerText =
         currentLang === "en" ? "Learn More About Nutrition" : "تعلم المزيد عن التغذية";
       displayResults();
     }
+
     function getQueryParams() {
       const params = new URLSearchParams(window.location.search);
       return {
@@ -354,11 +425,13 @@
         activity: params.get('activity'),
       };
     }
+
     function calculateBMR({ weight, height, age, gender }) {
       return gender === 'male'
         ? 10 * weight + 6.25 * height - 5 * age + 5
         : 10 * weight + 6.25 * height - 5 * age - 161;
     }
+
     function getActivityMultiplier(activity) {
       const multipliers = {
         sedentary: 1.2,
@@ -369,6 +442,7 @@
       };
       return multipliers[activity] || 1.2;
     }
+
     function calculateMacros(calories, weight, proteinPerKg) {
       const protein = Math.round(weight * proteinPerKg);
       const proteinCals = protein * 4;
@@ -377,6 +451,7 @@
       const carbs = Math.round((calories - proteinCals - fatCals) / 4);
       return { protein, carbs, fats };
     }
+
     function showMacros(calories, weight, proteinPerKg) {
       const { protein, carbs, fats } = calculateMacros(calories, weight, proteinPerKg);
       return `
@@ -387,6 +462,7 @@
           ${currentLang === "en" ? "Fats" : "دهون"}: ${fats}g
         </p>`;
     }
+
     function displayResults() {
       const data = getQueryParams();
       if (!data.weight || !data.height || !data.age || !data.gender || !data.activity) {
@@ -397,6 +473,7 @@
       }
       const bmr = calculateBMR(data);
       const tdee = bmr * getActivityMultiplier(data.activity);
+      globalTdee = tdee;
       const bulkLight = Math.round(tdee * 1.1);
       const bulkModerate = Math.round(tdee * 1.2);
       const bulkAggressive = Math.round(tdee * 1.3);
