--- a/result.html
+++ b/result.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -206,19 +207,6 @@
       transform: translateY(-2px);
       text-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
     }
-    #learn-more-btn::after {
-      content: '';
-      position: absolute;
-      top: 0; left: 0; bottom: 0; right: 0;
-      border-radius: 12px;
-      pointer-events: none;
-      box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
-      opacity: 0.2;
-      transition: opacity 0.3s ease;
-    }
-    #learn-more-btn:hover::after {
-      opacity: 0.4;
-    }
     /* Responsive Design */
     @media (max-width: 600px) {
       body {
@@ -240,7 +228,7 @@
       #print-pdf-btn,
       #learn-more-btn {
         width: 100%;
-        margin: 8px auto;
+        margin: 10px auto;
         font-size: 15px;
       }
       #toggle-theme,
@@ -261,7 +249,7 @@
       #share-btn,
       #print-pdf-btn,
       #learn-more-btn {
-        margin: 10px auto;
+        margin: 12px auto;
       }
     }
     /* Arabic Text Only Alignment */
@@ -530,3 +518,4 @@
   </script>
 </body>
 </html>
+```
