--- a/tdee.html
+++ b/tdee.html
@@ -1,4 +1,4 @@
-html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -65,6 +65,24 @@ html
     .content ul {
       padding-left: 20px;
     }
+    .bmr-link, .tdee-calculate {
+      color: blue !important;
+      text-decoration: underline !important;
+      font-weight: bold !important;
+      cursor: pointer;
+    }
+    .tdee-calculate {
+      display: block;
+      text-align: center;
+      margin: 20px 0;
+      font-size: 18px;
+    }
+    .arabic-text {
+      text-align: right !important;
+      direction: rtl !important;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 2.0;
+    }
     footer {
       margin-top: 40px;
       font-size: 12px;
@@ -114,7 +132,7 @@ html
       TDEE is the total amount of calories you burn in a day. It includes:
     </p>
     <ul>
-      <li><strong>BMR (Basal Metabolic Rate):</strong> Energy used just to keep your body functioning at rest 🧠💓</li>
+      <li><strong><a href="bmr.html" class="bmr-link">BMR (Basal Metabolic Rate)</a>:</strong> Energy used just to keep your body functioning at rest 🧠💓</li>
       <li><strong>TEF (Thermic Effect of Food):</strong> Calories burned from digesting food 🍽️</li>
       <li><strong>NEAT (Non-Exercise Activity Thermogenesis):</strong> Daily movements like walking, fidgeting 🚶‍♂️</li>
       <li><strong>EAT (Exercise Activity Thermogenesis):</strong> Calories burned during workouts 🏋️‍♀️</li>
@@ -131,6 +149,7 @@ html
     <p>
       TDEE = The key to smart nutrition planning. 💪
     </p>
+    <a href="human.html" class="tdee-calculate">Calculate Your TDEE</a>
   </div>
  <footer>
   Made by Mohab (
@@ -171,7 +190,7 @@ html
             TDEE هو إجمالي السعرات التي تحرقها خلال اليوم. ويشمل:
           </p>
           <ul>
-            <li><strong>معدل الأيض الأساسي (BMR):</strong> الطاقة التي يستخدمها الجسم أثناء الراحة 🧠💓</li>
+            <li><strong><a href="bmr.html" class="bmr-link">معدل الأيض الأساسي (BMR)</a>:</strong> الطاقة التي يستخدمها الجسم أثناء الراحة 🧠💓</li>
             <li><strong>تأثير الحرارة الناتج عن الطعام (TEF):</strong> السعرات التي تحرق أثناء الهضم 🍽️</li>
             <li><strong>الأنشطة غير الرياضية (NEAT):</strong> الحركات اليومية كالمشي أو التحرك 🚶‍♂️</li>
             <li><strong>التمارين الرياضية (EAT):</strong> السعرات المحروقة أثناء التمارين 🏋️‍♀️</li>
@@ -187,11 +206,17 @@ html
           </ul>
           <p>
             TDEE = المفتاح للتخطيط الغذائي الذكي 💪
-          </p>`;
-        document.body.dir = 'rtl';
+          </p>
+          <a href="human.html" class="tdee-calculate">احسب TDEE الخاص بك</a>`;
+        
+        // Apply Arabic styling to all elements
+        const content = document.getElementById('main-content');
+        content.className = 'content arabic-text';
       } else {
         document.getElementById('main-content').innerHTML = englishContent;
         document.body.dir = 'ltr';
+        const content = document.getElementById('main-content');
+        content.className = 'content';
       }
     }
   </script>
